ally component added NS

--- a/aclap/src/app/components/app.component.tns.html
+++ b/aclap/src/app/components/app.component.tns.html
@@ -9,6 +9,7 @@
         <Button class="btn-nav" text="Modulos" (tap)="navigateToModules()"></Button>
         <Button class="btn-nav" text="Eventos" (tap)="navigateToEvents()"></Button>
         <Button class="btn-nav" text="Perfil" (tap)="navigateToProfile_Login()"></Button>
+        <Button class="btn-nav" text="Aliados"  (tap)="navigateToAllies()"></Button>
         <Button class="btn-nav" text="Acerca de"></Button>
           
       </StackLayout>
