--- a/aclap/src/app/components/event-shared/events/events.component.tns.scss
+++ b/aclap/src/app/components/event-shared/events/events.component.tns.scss
@@ -1,1 +1,63 @@
-/* Add mobile styles for the component here.  */
+$jumbo-color: #23AEE5;
+$button-color: #Ef6423;
+$lime-color: #FAB521;
+$nav-color:#1c81a9;
+$gray-dark: #596668;
+$l-grey: #d3d8d8;
+
+.cardStyle {
+    background-color: #fff;
+    color: #fff;
+    margin-right: 15;
+    margin-left: 15;
+}
+
+.cardContent {
+    padding: 20;
+    font-weight: bold;
+    font-size: 12;
+}
+
+.module-header-text {
+    font-size: 24;
+    font-weight: bold;
+    text-align: center;
+    color: rgb(0, 0, 0);
+    background-color: #fff;
+}
+
+.header-text{
+    font-size: 36;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+}
+
+.text{
+    font-size: 12;
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+
+.body-text{
+    font-size: 14;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-left: 10;
+    margin-right: 10;
+    margin-bottom: 5;
+    margin-top: 5;
+}
+
+.img-banner{
+    opacity: 0.75;
+}
+
+.module-img{
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    background-color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-bottom: 25px;
+}
