--- a/aclap/src/app/components/module-shared/module-page/module-page.component.tns.scss
+++ b/aclap/src/app/components/module-shared/module-page/module-page.component.tns.scss
@@ -15,9 +15,9 @@ $l-grey: #d3d8d8;
 .body-text-backgrounds{
     font-size: 14;
     color: rgb(0, 0, 0);
-    text-align: left;
-    margin-left: 10;
-    margin-right: 10;
+    text-align: center;
+    margin-left: 5;
+    margin-right: 5;
     margin-bottom: 5;
 }
 
@@ -25,13 +25,38 @@ $l-grey: #d3d8d8;
     font-size: 14;
     color: rgb(0, 0, 0);
     text-align: center;
-    margin-left: 10;
-    margin-right: 10;
+    margin-left: 5;
+    margin-right: 5;
     margin-bottom: 5;
 }
 
 .title-text{
     font-size: 24;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-align: center;
+}
+
+.subtitle-age-text{
+    font-size: 16;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-top: 8;
+    margin-left: 5;
+}
+
+.subtitle-theme-text{
+    font-size: 16;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-top: 10;
+    margin-left: 5;
+}
+
+.text-discipline{
+    font-size: 12;
     font-weight: bold;
     color: rgb(0, 0, 0);
     text-align: center;
@@ -57,4 +82,11 @@ $l-grey: #d3d8d8;
 
 .img-banner{
     opacity: 0.75;
+}
+
+.cardStyleDisciplines {
+    background-color: #fff;
+    color: #fff;
+    margin: 5;
+    width: 120;
 }
