--- a/aclap/src/app/components/section-shared/edit/edit-displayer/edit-displayer.component.html
+++ b/aclap/src/app/components/section-shared/edit/edit-displayer/edit-displayer.component.html
@@ -21,6 +21,9 @@
             <div *ngIf="isYoutube(section)">
                 <app-edit-youtube [video]=section></app-edit-youtube>
             </div>
+            <div *ngIf="isAlly(section)">
+                <app-edit-ally [ally]=section></app-edit-ally>
+            </div>
         </div>
     </div>
 </div>
