--- a/aclap/src/app/components/allies-shared/allies/allies.component.html
+++ b/aclap/src/app/components/allies-shared/allies/allies.component.html
@@ -1,1 +1,34 @@
-<p>allies works!</p>
+<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url('+ bg_img +')'}">
+
+</div>
+<div class="container">
+    <div *ngIf="isAdmin" class="row">
+        <div class="col-12">
+            <span class="btn button" [routerLink]="['/aliados','editar']"> Editar / Agregar / Eliminar Aliado(s) </span>
+        </div>
+    </div>
+    <div class="row mt-4">
+        <div class="col-12">
+            <span>
+                <h1>
+                    Aliados
+                </h1>
+            </span>
+        </div>
+        <div class="col-12 mt-3">
+            <p class="text-justify" *ngFor="let part of text.split('\n')">
+                {{ part }}
+            </p>
+        </div>
+    </div>
+    <div class="row d-flex justify-content-center" >
+        <a *ngFor="let ally of allies; index as i" class="col-md-5 card d-flex align-items-center clickable mx-1" [href]="ally.link" >
+            <div class="row d-flex justify-content-center">
+                <img class="card-img-top img-fluid" [src]="ally.imageUrl" [alt]="ally.name" style="max-height: 250px;">
+            </div>
+            <div class="card-body d-flex justify-content-center">
+                <h5 class="card-title text-center"> {{ ally.name }} </h5>
+            </div>
+        </a>
+    </div>
+</div>
