--- a/aclap/src/app/components/shared/footer/footer.component.html
+++ b/aclap/src/app/components/shared/footer/footer.component.html
@@ -15,7 +15,7 @@
                     <li><a [routerLink]="['/modulos']">Módulos</a></li>
                     <li><a [routerLink]="['/eventos']">Eventos</a></li>
                     <li><a [routerLink]="['/acerca-de']">Acerca de</a></li>
-                    <li><a [routerLink]="['/aliados']">Aliados administrativos</a></li>
+                    <li><a [routerLink]="['/aliados']">Aliados</a></li>
                 </ul>
             </div>
             <div class="col-6 d-flex justify-content-end">
