--- a/aclap/src/app/components/profile-shared/profile-edit/profile-edit.component.html
+++ b/aclap/src/app/components/profile-shared/profile-edit/profile-edit.component.html
@@ -1,1 +1,43 @@
-<p>profile-edit works!</p>
+<div class="jumbotron">
+    <div class="container">
+        <div *ngIf="isAdmin" class="">
+            <div class="row">
+                <h1 class="text-center col-12">Administrador</h1>
+            </div>
+        </div>
+        <div *ngIf="isEducator" class="">
+            <div class="row">
+                <h1 class="text-center col-12">Persona Educadora</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-sm-5 col-md-3">
+                <h1>{{ user.name }} {{ user.lastname }}</h1>
+            </div>
+            <div class="col-12 col-sm-5 col-md-2 offset-sm-2 offset-md-7 ">
+                <img class="img-responsive rounded-circle
+                7" [src]="user.imageUrl" [alt]="'imagen de perfil de' + user.name">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <form [formGroup]=form>
+        <div class="form-group row" >
+            <label for="password" class="col-xl-2 col-form-label">Cambiar Contraseña</label>
+            <div class="col-xl">
+                <input type="password" formControlName=password class="form-control" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="confirmPassword" class="col-xl-2 col-form-label" >Confirmar Contraseña</label>
+            <div class="col-xl">
+                <input type="password" formControlName=confirmPassword class="form-control" />
+            </div>
+        </div>
+        <div class="form-group row">
+            <button type="submit" class="button btn"> Actualizar contraseña </button>
+        </div>
+    </form>
+</div>
