--- a/aclap/src/app/components/profile-shared/profile/profile.component.html
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="col-12 col-sm-5 col-md-2 offset-sm-2 offset-md-7 ">
                 <img class="img-responsive rounded-circle
-                7" [src]="user.imageUrl" [alt]="'image de perfil de' + user.name">
+                7" [src]="user.imageUrl" [alt]="'imagen de perfil de' + user.name">
             </div>
         </div>
     </div>
