--- a/aclap/src/app/components/shared/restore-password/restore-password.component.html
+++ b/aclap/src/app/components/shared/restore-password/restore-password.component.html
@@ -11,12 +11,12 @@
                 <div class="mb-5 card-body">
                     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                         <div class="form-group">
-                            <label for="username">E-mail</label>
-                            <input type="text" formControlName="username" class="form-control"/>
+                            <label for="email">E-mail</label>
+                            <input type="text" formControlName="email" class="form-control"/>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-white">
-                                Login
+                                Solicitar 
                             </button>
                         </div>
                     </form>
