--- a/aclap/src/app/components/about-us/about-us.component.html
+++ b/aclap/src/app/components/about-us/about-us.component.html
@@ -1,6 +1,4 @@
-<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url('+ bg_img +')'}">
-
-</div>
+<app-img-header [bg_img]="bg_img" [credit]="credit" class=".header-con"></app-img-header>
 <div class="container">
     <div class="row mt-4">
         <div class="col-12">
@@ -38,4 +36,22 @@
             </p>
         </div>
     </div>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <p class="text-justify">
+                Esta aplicación fué desarrollada y donada por estudiantes del Instituto Tecnológico de Costa Rica como parte del curso de Proyecto de Ingeniería de Software, durante el segundo semestre del 2020 bajo supervisión de la profesora María Estrada Sánchez. Los siguientes estudiantes desarrollaron esta aplicación:
+            </p>
+            <li>
+                Alejandro José Schmidt Ramírez
+            </li>
+            <li>
+                Josué Daniel Canales Mena
+            </li>
+            <li>
+                Jose Fabio Pérez Alpizar
+            </li>
+        </div>
+    </div>
+    <hr>
 </div>
