--- a/aclap/src/app/components/shared/register/register.component.html
+++ b/aclap/src/app/components/shared/register/register.component.html
@@ -1,5 +1,4 @@
-<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url('+ bg_img +')'}">
-</div>
+<app-img-header [bg_img]="bg_img" [credit]="credit" ></app-img-header>
 <div class="container">
     <div class="row mt-4">
         <div class="col-12">
