--- a/aclap/src/app/components/allies-shared/allies/allies.component.html
+++ b/aclap/src/app/components/allies-shared/allies/allies.component.html
@@ -1,6 +1,4 @@
-<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url('+ bg_img +')'}">
-
-</div>
+<app-img-header [bg_img]="bg_img" [credit]="credit" ></app-img-header>
 <div class="container">
     <div *ngIf="isAdmin" class="row">
         <div class="col-12">
