--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -1,7 +1,5 @@
+<app-img-header [bg_img]="bg_img" [credit]="credit" ></app-img-header>
 
-<div class="jumbotron jumbotron-fluid header-image" [ngStyle]="{backgroundImage:'url('+ bg_img +')'}">
-
-</div>
 <div class="container">
     <div class="row mt-4">
         <div class="col-12">
