--- a/aclap/src/app/components/shared/img-header/img-header.component.html
+++ b/aclap/src/app/components/shared/img-header/img-header.component.html
@@ -3,6 +3,6 @@
 </div>
 <div class="row info">
     <div class="col d-flex justify-content-end mr-3" >
-        <h5> Imagen de: {{ credit }} </h5>
+        <h5> Fotografía: {{ credit }} / PNUD-Costa Rica </h5>
     </div>
 </div>
