--- a/aclap/src/app/components/allies-shared/allies-edit/allies-edit.component.html
+++ b/aclap/src/app/components/allies-shared/allies-edit/allies-edit.component.html
@@ -20,17 +20,8 @@
     </div>
     <div class="row">
         <div class="col-12">
-            <div type="button" (click)="sectionButtonsCollapsed = !sectionButtonsCollapsed" aria-controls="collapseExample" [attr.aria-expanded]="!sectionButtonsCollapsed" class="btn mb-5 add-section col-12 d-flex justify-content-center">
-                <p>Agregar Sección</p>
-            </div>
-            <div id="collapseExample" [ngbCollapse]="sectionButtonsCollapsed">
-                <div class="row mt-2">
-                    <div class="col-12 col-md-6 align-self-center" *ngFor="let option of sectionOptions; let i=index">
-                        <div (click)="addSection(i)" class="hoverable clickable section-option">
-                            <h2 class="text-center">{{option}}</h2>
-                        </div>
-                    </div>
-                </div>
+            <div type="button" (click)="addSection(0)" aria-controls="collapseExample" class="btn mb-5 add-section col-12 d-flex justify-content-center">
+                <p>Agregar Aliado</p>
             </div>
         </div>
     </div>
